--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.3",
+    "http-status-codes": "^1.3.1",
+    "log4js": "^4.0.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   },
