--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "datash",
   "private": true,
   "version": "1.0.0",
-  "description": "Share data through browser with end-to-end encryption",
+  "description": "Share file or text through browser with end-to-end encryption",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "start": "npm run build && node src/server/index.js",
@@ -13,15 +13,19 @@
   "author": "Rousan Ali <rousanali786@gmail.com> (https://rousan.io)",
   "license": "MIT",
   "dependencies": {
+    "aes-js": "^3.1.2",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
+    "es6-promisify": "^6.0.1",
     "express": "^4.16.3",
     "http-status-codes": "^1.3.1",
+    "jsencrypt": "^3.0.0-rc.1",
     "log4js": "^4.0.2",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -46,6 +50,7 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "^3.1.3",
+    "worker-loader": "^2.0.0"
   }
 }
