--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "aes-js": "^3.1.2",
+    "antd": "^3.15.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
@@ -23,9 +24,11 @@
     "http-status-codes": "^1.3.1",
     "jsencrypt": "^3.0.0-rc.1",
     "log4js": "^4.0.2",
+    "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "ws": "^6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -34,6 +37,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.0",
+    "babel-plugin-import": "^1.11.0",
     "clean-webpack-plugin": "^1.0.0",
     "concurrently": "^4.0.0",
     "cross-env": "^5.2.0",
