--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -17,3 +17,4 @@ rules:
   no-param-reassign: "off"
   no-case-declarations: "off"
   react/sort-comp: "off"
+  max-len: [2, 120, 4, {"ignoreUrls": true}]
