--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "aes-js": "^3.1.2",
     "antd": "^3.15.0",
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "base64-arraybuffer": "^0.1.5",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
