--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-polyfill": "^6.26.0",
     "base64-arraybuffer": "^0.1.5",
     "body-parser": "^1.18.3",
+    "clipboard": "^2.0.4",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "es6-promisify": "^6.0.1",
@@ -51,7 +52,9 @@
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.17.3",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
