--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Share file or text through browser with end-to-end encryption",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "start": "node src/server/index.js",
+    "start": "npm run build && node src/server/index.js",
     "client": "cross-env NODE_ENV=development webpack-dev-server --devtool inline-source-map --hot",
     "server": "nodemon src/server/index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\""
@@ -30,6 +30,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.4.0",
     "uuid": "^3.3.2",
     "ws": "^6.2.0"
   },
