Fix npm scripts

--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "description": "Share file or text through browser with end-to-end encryption",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "start": "npm run build && node src/server/index.js",
+    "start:prod": "node src/server/index.js",
+    "start:dev": "npm run build && node src/server/index.js",
+    "start": "npm run start:prod",
     "client": "cross-env NODE_ENV=development webpack-dev-server --devtool inline-source-map --hot",
     "server": "nodemon src/server/index.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku": "git push heroku develop:master"
   },
   "author": "Rousan Ali <rousanali786@gmail.com> (https://rousan.io)",
   "license": "MIT",
