--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -21,3 +21,4 @@ rules:
   no-await-in-loop: "off"
   jsx-a11y/anchor-has-content: "off"
   jsx-a11y/anchor-is-valid: "off"
+  react/no-unescaped-entities: "off"
