--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ HOST=0.0.0.0
 PORT=3001
 DIST=./dist
 MAX_MSG_SIZE=52428800
+MONGODB_CONNECT_STRING=mongodb+srv://<user>:<password>@<host:port>/<database>?retryWrites=true
