--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "http-status-codes": "^1.3.1",
     "jsencrypt": "^3.0.0-rc.1",
     "log4js": "^4.0.2",
+    "mongoose": "^5.4.19",
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
