--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "http-status-codes": "^1.3.1",
     "js-cookie": "^2.2.0",
     "jsencrypt": "^3.0.0-rc.1",
+    "jszip": "^3.2.0",
     "log4js": "^4.0.2",
     "mongoose": "^5.4.19",
     "prop-types": "^15.7.2",
