Add basic webrtc support

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -22,3 +22,4 @@ rules:
   jsx-a11y/anchor-has-content: "off"
   jsx-a11y/anchor-is-valid: "off"
   react/no-unescaped-entities: "off"
+  import/no-extraneous-dependencies: "off"
