--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.5.0",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.0",
     "babel-plugin-import": "^1.11.0",
@@ -62,6 +63,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.17.3",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
@@ -69,5 +71,11 @@
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.3",
     "worker-loader": "^2.0.0"
-  }
+  },
+  "browserslist": [
+    "last 10 major versions",
+    "not dead",
+    "Firefox ESR",
+    "ie >= 11"
+  ]
 }
