Update staging script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "server": "nodemon src/server/index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku": "git push heroku master",
-    "staging": "git push staging master"
+    "staging": "git push staging master --force"
   },
   "author": "Rousan Ali <rousanali786@gmail.com> (https://rousan.io)",
   "license": "MIT",
