Add env for webpack port

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ HOST=0.0.0.0
 PORT=3001
 DIST=./dist
 MAX_MSG_SIZE=52428800
-MONGODB_CONNECT_STRING=mongodb+srv://<user>:<password>@<host:port>/<database>?retryWrites=true
+WEBPACK_PORT=3000
+MONGODB_CONNECT_STRING=mongodb+srv://<user>:<password>@<host>/<database>?retryWrites=true&w=majority
