--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "es6-promisify": "^6.0.1",
     "express": "^4.16.3",
     "express-basic-auth": "^1.1.6",
+    "file-saver": "^2.0.2",
     "http-status-codes": "^1.3.1",
     "js-cookie": "^2.2.0",
     "jsencrypt": "^3.0.0-rc.1",
