--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jszip": "^3.2.0",
     "log4js": "^4.0.2",
     "mongoose": "^5.4.19",
+    "peerjs": "^0.3.24",
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
