--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ DIST=./dist
 MAX_MSG_SIZE=52428800
 WEBPACK_PORT=3000
 MONGODB_CONNECT_STRING=mongodb+srv://<user>:<password>@<host>/<database>?retryWrites=true&w=majority
+API_CRED_USER=rousan
+API_CRED_PASS=rousan
