Add Android support

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-HOST=0.0.0.0
-PORT=3001
-DIST=./dist
-MAX_MSG_SIZE=52428800
-WEBPACK_PORT=3000
-MONGODB_CONNECT_STRING=mongodb+srv://<user>:<password>@<host>/<database>?retryWrites=true&w=majority
-API_CRED_USER=rousan
-API_CRED_PASS=rousan
+HOST=
+PORT=
+DIST=
+MAX_MSG_SIZE=
+WEBPACK_PORT=
+MONGODB_CONNECT_STRING=
+API_CRED_USER=
+API_CRED_PASS=
+SENDGRID_API_KEY=
