--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-basic-auth": "^1.1.6",
     "file-saver": "^2.0.2",
     "http-status-codes": "^1.3.1",
+    "js-base64": "^2.5.2",
     "js-cookie": "^2.2.0",
     "jsencrypt": "^3.0.0-rc.1",
     "jszip": "^3.2.0",
