--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
+    "string-replace-middleware": "^1.0.2",
     "uuid": "^3.3.2",
     "ws": "^6.2.0"
   },
@@ -61,9 +62,9 @@
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^6.0.1",
     "nodemon": "^1.17.3",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^10.2.1",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
